@@ -271,7 +271,7 @@ public class StructureImportingTest extends MavenImportingTestCase {
                      "<artifactId>test-create-2</artifactId>" +
                      "<name>Maven archetype Test create-2-subModule</name>" +
                      "<packaging>pom</packaging>");
-    importProjectWithErrors(true);
+    importProjectWithErrors();
   }
 
   public void testParentWithoutARelativePath() {
@@ -847,6 +847,33 @@ public class StructureImportingTest extends MavenImportingTestCase {
     assertEquals(LanguageLevel.JDK_1_3, getLanguageLevelForModule());
   }
 
+  public void testPreviewLanguageLevel() {
+    importProject("<groupId>test</groupId>" +
+                  "<artifactId>project</artifactId>" +
+                  "<version>1</version>" +
+
+                  "<build>" +
+                  "  <plugins>" +
+                  "    <plugin>\n" +
+                  "      <groupId>org.apache.maven.plugins</groupId>\n" +
+                  "      <artifactId>maven-compiler-plugin</artifactId>\n" +
+                  "      <version>3.8.0</version>\n" +
+                  "      <configuration>\n" +
+                  "          <release>12</release>\n" +
+                  "          <compilerArgs>\n" +
+                  "              <arg>--enable-preview</arg>\n" +
+                  "          </compilerArgs>\n" +
+                  "          <source>12</source>\n" +
+                  "          <target>12</target>\n" +
+                  "      </configuration>\n" +
+                  "    </plugin>" +
+                  "  </plugins>" +
+                  "</build>");
+
+    assertModules("project");
+    assertEquals(LanguageLevel.JDK_12_PREVIEW, getLanguageLevelForModule());
+  }
+
   public void testInheritingLanguageLevelFromPluginManagementSection() {
     importProject("<groupId>test</groupId>" +
                   "<artifactId>project</artifactId>" +
@@ -1118,10 +1145,31 @@ public class StructureImportingTest extends MavenImportingTestCase {
     assertModuleLibDeps("m2", "Maven: junit:junit:4.0");
   }
 
-  public void testProjectWithProfilesXmlFile() {
+  public void testProjectWithProfiles() {
     createProjectPom("<groupId>test</groupId>" +
                      "<artifactId>project</artifactId>" +
                      "<version>1</version>" +
+
+                     "<profiles>" +
+                     "  <profile>" +
+                     "    <id>one</id>" +
+                     "    <activation>" +
+                     "      <activeByDefault>false</activeByDefault>" +
+                     "    </activation>" +
+                     "    <properties>" +
+                     "      <junit.version>4.0</junit.version>" +
+                     "    </properties>" +
+                     "  </profile>" +
+                     "  <profile>" +
+                     "    <id>two</id>" +
+                     "    <activation>" +
+                     "      <activeByDefault>false</activeByDefault>" +
+                     "    </activation>" +
+                     "    <properties>" +
+                     "      <junit.version>3.8.1</junit.version>" +
+                     "    </properties>" +
+                     "  </profile>" +
+                     "</profiles>" +
 
                      "<dependencies>" +
                      "  <dependency>" +
@@ -1130,26 +1178,6 @@ public class StructureImportingTest extends MavenImportingTestCase {
                      "    <version>${junit.version}</version>" +
                      "  </dependency>" +
                      "</dependencies>");
-
-    createProfilesXml("<profile>" +
-                      "  <id>one</id>" +
-                      "  <activation>" +
-                      "    <activeByDefault>false</activeByDefault>" +
-                      "  </activation>" +
-                      "  <properties>" +
-                      "    <junit.version>4.0</junit.version>" +
-                      "  </properties>" +
-                      "</profile>" +
-
-                      "<profile>" +
-                      "  <id>two</id>" +
-                      "  <activation>" +
-                      "    <activeByDefault>false</activeByDefault>" +
-                      "  </activation>" +
-                      "  <properties>" +
-                      "    <junit.version>3.8.1</junit.version>" +
-                      "  </properties>" +
-                      "</profile>");
 
     importProjectWithProfiles("one");
     assertModules("project");
@@ -1166,10 +1194,22 @@ public class StructureImportingTest extends MavenImportingTestCase {
     ignore(); // not supported by 2.2
   }
 
-  public void testProjectWithProfilesXmlWithNewRootTagFile() {
+  public void testProjectWithDefaultProfile() {
     createProjectPom("<groupId>test</groupId>" +
                      "<artifactId>project</artifactId>" +
                      "<version>1</version>" +
+
+                     "<profiles>" +
+                     "  <profile>" +
+                     "    <id>one</id>" +
+                     "    <activation>" +
+                     "      <activeByDefault>true</activeByDefault>" +
+                     "    </activation>" +
+                     "    <properties>" +
+                     "      <junit.version>4.0</junit.version>" +
+                     "    </properties>" +
+                     "  </profile>" +
+                     "</profiles>" +
 
                      "<dependencies>" +
                      "  <dependency>" +
@@ -1178,60 +1218,6 @@ public class StructureImportingTest extends MavenImportingTestCase {
                      "    <version>${junit.version}</version>" +
                      "  </dependency>" +
                      "</dependencies>");
-
-    createProfilesXml("<profile>" +
-                      "  <id>one</id>" +
-                      "  <activation>" +
-                      "    <activeByDefault>false</activeByDefault>" +
-                      "  </activation>" +
-                      "  <properties>" +
-                      "    <junit.version>4.0</junit.version>" +
-                      "  </properties>" +
-                      "</profile>" +
-
-                      "<profile>" +
-                      "  <id>two</id>" +
-                      "  <activation>" +
-                      "    <activeByDefault>false</activeByDefault>" +
-                      "  </activation>" +
-                      "  <properties>" +
-                      "    <junit.version>3.8.1</junit.version>" +
-                      "  </properties>" +
-                      "</profile>");
-
-    importProjectWithProfiles("one");
-    assertModules("project");
-
-    assertModuleLibDeps("project", "Maven: junit:junit:4.0");
-
-    importProjectWithProfiles("two");
-    assertModules("project");
-
-    assertModuleLibDeps("project", "Maven: junit:junit:3.8.1");
-  }
-
-  public void testProjectWithDefaultProfileInProfilesXmlFile() {
-    createProjectPom("<groupId>test</groupId>" +
-                     "<artifactId>project</artifactId>" +
-                     "<version>1</version>" +
-
-                     "<dependencies>" +
-                     "  <dependency>" +
-                     "    <groupId>junit</groupId>" +
-                     "    <artifactId>junit</artifactId>" +
-                     "    <version>${junit.version}</version>" +
-                     "  </dependency>" +
-                     "</dependencies>");
-
-    createProfilesXml("<profile>" +
-                      "  <id>one</id>" +
-                      "  <activation>" +
-                      "    <activeByDefault>true</activeByDefault>" +
-                      "  </activation>" +
-                      "  <properties>" +
-                      "    <junit.version>4.0</junit.version>" +
-                      "  </properties>" +
-                      "</profile>");
 
     importProject();
     assertModules("project");
